samples/_failures_safe/1761514935_36bea5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6e9cf62b.c: In function ‘main’:
./samples/SAFE/__tmp_6e9cf62b.c:147:24: error: missing terminating " character
  147 |                 printf("%
      |                        ^~
./samples/SAFE/__tmp_6e9cf62b.c:147:17: error: expected expression at end of input
  147 |                 printf("%
      |                 ^~~~~~
./samples/SAFE/__tmp_6e9cf62b.c:147:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6e9cf62b.c:147:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6e9cf62b.c:147:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6e9cf62b.c:147:17: error: expected declaration or statement at end of input
